--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
 
 
         </section>
-        <aside>aside</aside>
+        <aside>
+            <article>
+              <h4>Connect with Me<br><br></h4>
+              <a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
+              <a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
+              <a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
+            </article>
+        </aside>
 
     </div> <!-- <closes div container>  -->
   </div> <!-- <closes div bodycontainer>  -->
