--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         
         <nav>
           <a href="index.html">About</a> &nbsp&nbsp
-          <a href="portfolio.html/">Portfolio</a> &nbsp&nbsp
-          <a href="contact.html/">Contact</a> 
+          <a href="portfolio.html">Portfolio</a> &nbsp&nbsp
+          <a href="contact.html">Contact</a> 
         </nav>
     </div>
   </div> 
