Finals Pre-Clean Up

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
     <div class="container">
     
       <section  class="portfolio-section">
-          <article>
-            <h2>Portfolio<br><br></h2>
+<!--           <article>
+ -->            <h2>Portfolio<br><br></h2>
             <div class="thumbnails">
               <img src="assets/images/portfolio1.jpg" alt="Hangman" class="thumbnails">
               <header class="thumbnail-header">Hangman</header>
@@ -59,8 +59,8 @@
               <img src="assets/images/portfolio5.jpg" alt="Rock Paper Scissors" class="thumbnails">
               <header class="thumbnail-header">Rock Paper Scissors</header>
             </div>
-          </article>
-            
+<!--           </article>
+ -->            
 <!--              <div>  </div> -->
 
 
@@ -79,7 +79,7 @@
  
 <!--   </div>  --><!-- <closes div wrapper>  -->
 
-<footer class="push">&#169; Copyright 2017 Ryan Stangle</footer>
+<footer>&#169; Copyright 2017 Ryan Stangle</footer>
 
 </body>
 </html>
