--- a/index.html
+++ b/index.html
@@ -37,18 +37,26 @@
     <div class="container">
     
       <section>
-          <article>
-            <h2>About Me<br><br></h2>
-            <img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="profile-pic">
-            <p>Now this is a story all about how. My life got flipped-turned upside down. And I'd like to take a minute, just sit right there. I'll tell you how I became the prince of a town called Bel-Air.</p>
+<!--           <article>
+ -->            <h2>About Me<br><br></h2>
+            <div>
+              <img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="profile-pic">
+              <p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, just sit right there. I'll tell you how I became the prince of a town called Bel-Air.</p>
 
-            <p>In west Philadelphia born and raised, On the playground was where I spent most of my days. Chillin' out maxin' relaxin' all cool, And all shooting some b-ball outside of the school. When a couple of guys who were up to no good, Started making trouble in my neighborhood. I got in one little fight and my mom got scared. She said, "You're movin' with your auntie and uncle in Bel-Air."</p>
-          </article>
+              <p>In west Philadelphia born and raised, On the playground was where I spent most of my days. Chillin' out maxin' relaxin' all cool, and all shooting some b-ball outside of the school. When a couple of guys who were up to no good, started making trouble in my neighborhood. I got in one little fight and my mom got scared. She said, "You're movin' with your auntie and uncle in Bel-Air."</p>
+
+              <p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, just sit right there. I'll tell you how I became the prince of a town called Bel-Air.</p>
+
+              <p>In west Philadelphia born and raised, On the playground was where I spent most of my days. Chillin' out maxin' relaxin' all cool, and all shooting some b-ball outside of the school. When a couple of guys who were up to no good, started making trouble in my neighborhood. I got in one little fight and my mom got scared. She said, "You're movin' with your auntie and uncle in Bel-Air."</p>
             
+            </div>
+
+<!--           </article>
+ -->            
 <!--              <div>  </div> -->
 
 
-        </section>
+      </section>
         <aside>
             <article>
               <h4>Connect with Me<br><br></h4>
