--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h2>About Me<br><br></h2>
             <div>
               <img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="profile-pic">
-              <p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, and eat a sub, I'll tell you how I became the prince of a site called GitHub.</p>
+              <p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
 
-              <p>In North Central Florida, raised and trained, in Adobe® Photoshop® is where I spent most of my days. Chillin' out maxin' relaxin' all cool, all changin' some backgrounds with 'em photoshoppin' tools. When a couple of times I got kinda bored, started lookin' through front-end code and thought I could know more. I designed one little site and my intrest was peaked, I said, "Sign-up for full-stack bootcamp", and this is my homework after only one week.</p>
+              <p>In east Central Florida, raised and trained, in Adobe® Photoshop® is where I spent most of my days. Chillin' out maxin' relaxin' all cool, all changin' some backgrounds with photoshoppin' tools. When a couple of times I got kinda bored, started lookin' at front-end code and thought I could know more. So I designed one little site and my intrest was peaked, I said, "Sign-up for full-stack", and this is my homework after only one week.</p>
 
               <p>Hope you all liked my ode to the "Fresh Prince of Bel-Air®". I am a Graphic Designer with print and some web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
 
@@ -40,12 +40,10 @@
       </section>
         
         <aside>
-            <article>
               <h4>Connect with Me<br><br></h4>
               <a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
               <a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
               <a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
-            </article>
         </aside>
 
     </div> <!-- <closes div container>  -->
