--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <header>Ryan Stangle</header>
         
         <nav>
-          <a href="index.html">About</a> &#160;&#160;
-          <a href="portfolio.html">Portfolio</a> &#160;&#160;
+          <a href="index.html">About</a> &#160;&#160;|
+          <a href="portfolio.html">Portfolio</a> &#160;&#160;|
           <a href="contact.html">Contact</a> 
         </nav>
     </div>
