--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               <img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="profile-pic">
               <p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
 
-              <p>In east Central Florida, raised and trained, in Adobe® Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, all changin' some backgrounds with photoshoppin' tools. When a couple of times I got kinda bored, started lookin' at front-end code and thought I could know more. So I designed one little site and my intrest was peaked, I said, "Sign-up for full-stack", and this is my homework after only one week.</p>
+              <p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, all changin' some backgrounds with photoshoppin' tools. When a couple of times I got kinda bored, started lookin' at front-end code and thought I could know more. So I designed one little site and my interest was peaked, I said, "Sign-up for full-stack", and this is my homework after only one week.</p>
 
-              <p>Hope you all liked my ode to the "Fresh Prince of Bel-Air®". When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
+              <p>Hope you all liked my ode to the <i>"Fresh Prince of Bel-Air®"</i>. When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
 
               <p>In my spare time, yeah... I know... what's that, I like to travel, play a little beach volleyball, do some CrossFit <i>(it may actually be a cult)</i>, and just try and relax as much as possible.</p>
             </div>
